tests/checker/diagnostics/0693_fcm_unpack_with_type_mismatch_04.ml.infer.expected
File "0693_fcm_unpack_with_type_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0693_fcm_unpack_with_type_mismatch_04 is not a valid module name.

File "0693_fcm_unpack_with_type_mismatch_04.ml", line 13, characters 28-40:
13 |   let module N_delta = (val packed_delta : Box_delta with type t = bool) in
                                 ^^^^^^^^^^^^
Error: The value packed_delta has type (module Box_delta)
       but an expression was expected of type
         (module Box_delta with type t = bool)
